--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html {
+https://www.svgrepo.com/show/345221/three-dots.svghtml {
   box-sizing: border-box;
   background: url('https://source.unsplash.com/NFs6dRTBgaM/2000x2000') fixed;
   background-size: cover;
